--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,7 @@
       <input type="password" class="form-control" name="password">
     </div>
     <button type="submit" class="btn btn-dark">Login</button>
+    <p>Don't have an account? Register <a href="/register">here.</a></p>
   </form>
 </div>
 
