--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" name="password">
     </div>
-    <button type="submit" class="btn btn-dark">Login</button>
+    <button type="submit" class="btn btn-dark my-3">Login</button>
     <p>Don't have an account? Register <a href="/register">here.</a></p>
   </form>
 </div>
