--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,8 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" name="password">
     </div>
-    <button type="submit" class="btn btn-dark">Register</button>
+    <button type="submit" class="btn btn-dark my-3">Register</button>
+    <p>Already have an account? Login <a href="/login">here.</a></p>
   </form>
 </div>
 
